--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
     <h1>Hello </h1>
     <h2>my name </h2>
+
+    <h1>lisa rock star</h1>
+    <h1> i dont no what to type </h1>
 </body>
 </html>
